fix(street): fix street issue with richest position, remove hardcode value for firefox, fix issue with z-index (#783)

--- a/src/photographer/photographer-places/photographer-places.component.css
+++ b/src/photographer/photographer-places/photographer-places.component.css
@@ -34,6 +34,10 @@
   text-align: center;
 }
 
+.paddingTop {
+  padding-top: 20px;
+}
+
 #photographer-places .place-description .family {
   width: 33%;
   min-height: 1px;
